one to one communication

--- a/public/template.html
+++ b/public/template.html
@@ -5,7 +5,7 @@
 			</br></br>
 			<input  id="input1" ng-model="my_pass" placeholder="Your Pass..">	    	
 			</br></br>
-			<button ng-click="next()"type="button" class="btn btn-success btn-lg btn-block">Continue</button>
+			<button ng-click="login()"type="button" class="btn btn-success btn-lg btn-block">Continue</button>
 			</br></br>
 			<p><a href="/#!/signup">Not a member!Signup</a></p>
 		 </div>
